fixed stretching-thumbnail issue

--- a/src/assets/styles/_assets.scss
+++ b/src/assets/styles/_assets.scss
@@ -1517,11 +1517,17 @@
 	height: 400px;
 	background: #ddd;
 	margin-bottom: 40px;
+
+	&--auto-height {
+		height: auto;
+		width: 100%;
+	}
 }
 
 .tab_maps-map-thumbnail img {
 	height: 100%;
 	width: 100%;
+	display: block;
 }
 
 .grid-ignore-wrapper {
